refactor: update absence retrieval logic using specific filters and improve list handling
- Replaced `findAllByNome` with `findByFlgAusenciaAndTipoAusencia` for enhanced filter specificity.
- Updated list handling by replacing `get(0)` with `getFirst` for improved clarity.
- Added new repository method `findByFlgAusenciaAndTipoAusencia` in `ParamSituacaoEntityRepository`.